fix uneven line height for first line in headings
the before element (number) had a larger line height
than the heading line height.
still not equal, but less, so it works out

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -239,6 +239,7 @@ main
     color: $fg-dim
     font-weight: 300
     font-size: 1.25rem
+    line-height: 1.1em
 
   > h2:before
     content: counter(h2-counter) ". "
